--- a/shichagundong/style.css
+++ b/shichagundong/style.css
@@ -34,7 +34,6 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 80%;
   width: 100%;
   height: 45vh;
   overflow: hidden;
@@ -70,7 +69,7 @@ body {
 }
 
 .item-text {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   text-align: center;
   color: #ffffff;
 }
